# Mandelbrot

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  MAINTAINING.md  MandelDrawer.cpp  MandelDrawer.h  MandelMap.cpp  MandelMap.h  MandelThread.cpp  MandelThread.h  Mandelbrot.sln  Mandelbrot.vcproj  Mandelbrot.vcxproj  README.md  README.txt  REUSE.toml  Readme.md  build-windows.ps1  build.rs  drawing.cpp  drawing.h  font.h  main.cpp  renovate.json  text_rendering.cpp  text_rendering.h
.github/workflows/: main.yml
docs/: screenshot.png.license
scripts/: Move-Packages.ps1
src/: MandelDrawer.calculate.cpp  MandelDrawer.calculate.hpp  MandelDrawer.cpp  MandelDrawer.h  MandelMap.cpp  MandelMap.h  MandelThread.cpp  MandelThread.h  MandelThread.work.cpp  calculation.rs  font.h  font.rs  main.cpp  main.rs  mandel_map.rs  render.rs  text.rs  text_rendering.cpp  text_rendering.h
